[tool.poetry]
name = "producthunt-parsing"
version = "0.1.0"
description = ""
authors = ["Kirill Bazarov <kl.bazarov@gmail.com>"]
readme = "README.md"
packages = [{include = "producthunt_parsing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
